--- a/src/main/resources/templates/guestbook/list.html
+++ b/src/main/resources/templates/guestbook/list.html
@@ -5,7 +5,40 @@
 
     <th:block th:fragment="content">
 
-        <h1>GuestBook List Page</h1>
+        <h1 class="mt-4">GuestBook List Page</h1>
+
+        <table class="table table-striped">
+            <thead>
+                <tr scope="col">#</tr>
+                <tr scope="col">Gno</tr>
+                <tr scope="col">Title</tr>
+                <tr scope="col">Regdate</tr>
+            </thead>
+            <tbody>
+                <tr th:each="dto : ${result.dtoList}">
+                    <th scope="row">[[${dto.gno}]]</th>
+                    <td>[[${dto.title}]]</td>
+                    <td>[[${dto.writer}]]</td>
+                    <td>[[${#temporals.format(dto.regDate, 'yyyy/MM/dd')}]]</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <ul class="pagination h-100 justify-content-center align-items-center">
+            <li class="page-item" th:if="${result.prev}">
+                <a href="#" class="page-link" tabindex="-1">Previous</a>
+            </li>
+
+            <li th:class=" 'page-item ' + ${result.page == page?'active':''}" 
+                th:each="page: ${result.pageList}">
+                <a href="#" class="page-link">[[${page}]]</a>
+            </li>
+
+            <li class="page-item" th:if="${result.next}">
+                <a href="#" class="page-link">Next</a>
+            </li>
+
+        </ul>
 
     </th:block>
     
